@@ -130,14 +130,11 @@ def do_describe(packages, verbose=False):
                 print("%-24s %s" % (packageversion[0], packageversion[1]))
 
 
-def do_describe_new(install=False, verbose=False):
+def do_describe_new(verbose=False):
     """Report on packages that are newly available."""
     new_packages = upgradable()
     if new_packages:
         do_describe(new_packages, verbose)
-        if install:
-            print("="*76)
-            do_install(new_packages)
     else:
         print("No new packages")
 
