@@ -93,10 +93,6 @@ def main():
     message = "specify a distribution to use (e.g. testing or experimental)"
     parser_dist.add_argument("-d", "--dist", help=message)
 
-    parser_install = argparse.ArgumentParser(add_help=False)
-    parser_install.add_argument("-i", "--install", action="store_true",
-         help="install the newly-available packages")
-
     parser_fileinput = argparse.ArgumentParser(add_help=False)
     parser_fileinput.add_argument("-f", "--fileinput", action="store_true",
         help=("if any of the arguments are files, assume their contents to "
@@ -148,8 +144,7 @@ def main():
 
     function = commands.autodownload
     parser_autodownload = subparsers.add_parser("autodownload",
-        parents=[parser_verbose, parser_yesno, parser_auth, parser_install,
-                 parser_teach],
+        parents=[parser_verbose, parser_yesno, parser_auth, parser_teach],
         description=function.__doc__)
     parser_autodownload.set_defaults(func=function)
 
@@ -298,14 +293,14 @@ def main():
     parser_init.set_defaults(func=function)
 
     function = commands.install
-    parser_installer = subparsers.add_parser("install",
+    parser_install = subparsers.add_parser("install",
         parents=[parser_recommends, parser_yesno, parser_auth, parser_dist,
                  parser_fileinput, parser_teach],
         aliases="isntall autoinstall".split(),
         description=function.__doc__,
         formatter_class=argparse.RawDescriptionHelpFormatter)
-    parser_installer.add_argument("packages", nargs="+")
-    parser_installer.set_defaults(func=function)
+    parser_install.add_argument("packages", nargs="+")
+    parser_install.set_defaults(func=function)
 
     function = commands.installsuggested
     parser_installsuggested = subparsers.add_parser("installsuggested",
@@ -429,7 +424,6 @@ def main():
 
     function = commands.new
     parser_new = subparsers.add_parser("new",
-                 parents=[parser_install],
                  description=function.__doc__)
     parser_new.set_defaults(func=function)
 
