@@ -15,8 +15,9 @@ wajig (2.5~pre) unstable; urgency=low
   * AUTODOWNLOAD, TOUPGRADE, NEWDETAIL: fix an exception that occurs when
     ~/.wajig dir is removed
   * NEWUPGRADES: doesn't seem to provide much more than TOUGPRADE, so remove
+  * AUTODOWNLOAD, NEW: get rid of --install option; it's overkill
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sat, 31 Mar 2012 00:14:17 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sat, 31 Mar 2012 00:41:52 +0200
 
 wajig (2.4.1) unstable; urgency=low
 
